--- a/css/less/header.less
+++ b/css/less/header.less
@@ -18,4 +18,13 @@
 			transform: translateY(-50%);
 		}
 	}
+
+	.text-panel {
+		.tag-line {
+			h1 {
+				font-family: 'hurme-sans-2';
+				font-weight: bold;
+			}
+		}
+	}
 }
