--- a/css/less/type.less
+++ b/css/less/type.less
@@ -3,7 +3,19 @@
 /* Type
 --------------------------------------------- */
 
+	@font-face {
+		font-family: 'hurme-sans-2';
+		src: url('fonts/hurme-geometric-sans-2/HurmeGeometricSans2-Regular.otf');
+		font-weight: normal;
+		font-style: normal;
+	}
 
+	@font-face {
+		font-family: 'hurme-sans-4';
+		src: url('fonts/hurme-geometric-sans-4/HurmeGeometricSans4-Regular.otf');
+		font-weight: normal;
+		font-style: normal;
+	}
 	
 	.copy(@size: 24px, @weight: 200, @lineheight: 30px) {
 		font-family: 'brandon-grotesque',Arial,sans-serif;
